2012-10-12  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/GNUstepBase/NSDebug+GNUstepBase.h:
        Fix format of logs produced by two of the three method macros ...
        a bug spotted by Fred.

2012-10-11  Marat Ibadinov <ibadinov@me.com>

        * Headers/Foundation/NSArray.h
        * Headers/Foundation/NSAutoreleasePool.h
        * Headers/Foundation/NSBundle.h
        * Headers/Foundation/NSCoder.h
        * Headers/Foundation/NSComparisonPredicate.h
        * Headers/Foundation/NSCompoundPredicate.h
        * Headers/Foundation/NSConnection.h
        * Headers/Foundation/NSData.h
        * Headers/Foundation/NSDate.h
        * Headers/Foundation/NSDictionary.h
        * Headers/Foundation/NSError.h
        * Headers/Foundation/NSException.h
        * Headers/Foundation/NSExpression.h
        * Headers/Foundation/NSHTTPCookie.h
        * Headers/Foundation/NSHTTPCookieStorage.h
        * Headers/Foundation/NSIndexPath.h
        * Headers/Foundation/NSIndexSet.h
        * Headers/Foundation/NSInvocation.h
        * Headers/Foundation/NSKeyValueObserving.h
        * Headers/Foundation/NSLock.h
        * Headers/Foundation/NSNetServices.h
        * Headers/Foundation/NSObjCRuntime.h
        * Headers/Foundation/NSOperation.h
        * Headers/Foundation/NSPathUtilities.h
        * Headers/Foundation/NSPointerArray.h
        * Headers/Foundation/NSPointerFunctions.h
        * Headers/Foundation/NSPredicate.h
        * Headers/Foundation/NSProcessInfo.h
        * Headers/Foundation/NSPropertyList.h
        * Headers/Foundation/NSScanner.h
        * Headers/Foundation/NSSet.h
        * Headers/Foundation/NSSortDescriptor.h
        * Headers/Foundation/NSSpellServer.h
        * Headers/Foundation/NSStream.h
        * Headers/Foundation/NSString.h
        * Headers/Foundation/NSThread.h
        * Headers/Foundation/NSTimeZone.h
        * Headers/Foundation/NSTimer.h
        * Headers/Foundation/NSURL.h
        * Headers/Foundation/NSURLCache.h