@@ -955,14 +955,6 @@ int gnustep_base_user_main (int argc, char *argv[], char *env[])
 }
 int main(int argc, char *argv[], char *env[])
 {
-#ifdef NeXT_RUNTIME
-  /* This memcpy has to be done before the first message is sent to any
-     constant string object. See Apple Radar 2870817 */
-  memcpy(&_NSConstantStringClassReference,
-         objc_getClass(STRINGIFY(NXConstantString)),
-         sizeof(_NSConstantStringClassReference));
-#endif
-
 #if defined(__MINGW__)
   WSADATA lpWSAData;
 
